--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -9,8 +9,13 @@
     <small>Slug:{{slug}}</small>
     <small>Data de criação: {{date}}</small><br>
     <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar caregoria</button></a>
+
+    <form action="/admin/categorias/deletar" method="POST">
+      <input type="hidden" name="id" value="{{_id}}">
+      <button type="submit" class="btn btn-danger mt-2">Deletar categoria</button>
+    </form>
   </div>
 </div>
 {{else}}
-
+<h4 class="mt-4">Nenhuma categoria registrada</h4>
 {{/each}}
